# strips

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  http.js  include.js  include2.js  index.js  main.js  test.yaml
cmake/: Findcsystem.cmake  Findduktape.cmake  Findsyrup-fs.cmake  Findsyrup-path.cmake  Findsyrup-term.cmake
cxx/: CMakeLists.txt  array.cpp  converters.cpp  module-resolver.cpp  object.cpp  object_p.hpp  reference.cpp  strips.cpp  value.cpp  vm.cpp
include/strips/: definitions.h  modules.h  strips.h  types.h  utils.h
include/strips++/: any.hpp  array.hpp  callable.hpp  converters.hpp  errors.hpp  function.hpp  module-resolver.hpp  object.hpp  reference.hpp  stack.hpp  strips++.hpp  types.hpp  utils.hpp  value.hpp  vm.hpp
include/strips/curl/: curl.h  utils.h
include/strips/exec/: exec.h
include/strips/filesystem/: filesystem.h
include/strips/io/: io.h
include/strips/os/: os.h
include/strips/path/: path.h
include/strips/prompt/: prompt.h
js/: curl.js  io.js  utils.js
runtime/: .babelrc  package-lock.json  package.json  rollup.config.js
runtime/src/: curl.ts  evironment.d.ts  format.ts  io.ts  polyfills.ts  util.ts
scripts/: generate_js.js
sp/: CMakeLists.txt  main.c
src/: CMakeLists.txt  _commonjs.h  commonjs.c  commonjs.h  commonjs_file.c  commonjs_file.h  commonjs_module.c  commonjs_module.h  console.c  console.h  file-utils.c  file-utils.h  helpers.c  helpers.h  modules.c  private.c  private.h  script-data.h  strips.c  types.c  utils.c
src/curl/: CMakeLists.txt  client.c  curl-request.c  curl.c  form.c  header.c  request.c  utils.c
src/exec/: exec.c
src/filesystem/: CMakeLists.txt  filesystem.c
src/io/: CMakeLists.txt  file.c  io.c  reader.c  writer.c
src/os/: dir.c  env.c  misc.c  os.c
src/path/: path.c  path.h
src/prompt/: prompt.c  prompt.h
strips/: CMakeLists.txt  main.c  main.cpp
test/: CMakeLists.txt  cpp.js  main.c  modules.c  prompt.js  refs.c
test-server/: index.js  package-lock.json  package.json
